# some_python_code

./: .gitignore  LICENSE  README.md  ask.py  attracteur_lorentz.py  attracteur_lorenz.py  balistics.py  ball_game.py  c_exp_lyap_logist.py  chaos.py  erreur_sys_stat.py  find_stars.ipynb  incertitude_efficacité.py  logmap_main.py  my_lib.py  orbit.py  oscillateur_v2.py  perlin_noise.py  pyproject.toml  verif.py
hell/: README.md  compare_list_elements.py  display_half_string.py  find_emma.py  keep_multiple_of_five.py  keep_odd_even.py  print_pyramid.py  reverse_number.py  sum_or_product.py  test.py
libs/: __init__.py  find_stars.py
libs/logistic_map/: show.py
libs/utils/: my_lib.py
logistic_map/: lyapounov.py  show.py  suite.py
playground/: brownian_motion.py  cosmo.ipynb  decoupling.ipynb  elec.py  find_stars.ipynb  logmap_main.py  mosaic.py  orbit.py  perlin_noise.py  premier.py
playground/COHERENT/: n_flux.ipynb  nu_flux.ipynb
playground/hell/: compare_list_elements.py  display_part.py  doom_sort.py  sum_pairs.py  verbe_premier_groupe.py
utils/: my_lib.py
