[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "libs"
authors = [{name = "zazbone", email = "coczaz@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.1"
description = "Des fois j'ai rien envie de faire"
dependencies = [
	"astropy ~= 5.1",
	"numpy >= 1.23",
	"matplotlib >= 3.6",
	"scipy >= 1.9",
	"astropy",
	"pyglet"
]


[project.optional-dependencies]
dev = ["ipykernel ~= 6.16"]

[project.urls]
Home = "https://github.com/zazbone"
